--- a/takeHome/th_ex4/th_ex4.qmd
+++ b/takeHome/th_ex4/th_ex4.qmd
@@ -60,13 +60,19 @@ Generally, there are two key types of merchandise traded by Singapore, i.e. oil 
 
 [^1]: Singapore Department of Statistics. 2023. Singapore's International Trade. https://www.singstat.gov.sg/modules/infographics/singapore-international-trade
 
++------------------------------------+----------------------+----------------------+
 | Sections                           | Exports              | Imports              |
-|------------------------------------|----------------------|----------------------|
++====================================+======================+======================+
 | Machinery & Transport Equipment    | S\$363.5 Bil (63.1%) | S\$319.0 Bil (62.6%) |
++------------------------------------+----------------------+----------------------+
 | Chemicals & Chemical Products      | S\$83 Bil (14.4%)    | S\$52.3 Bil (10.3%)  |
++------------------------------------+----------------------+----------------------+
 | Miscellaneous Manufactured Articls | S\$56.4 Bil (9.8%)   | S\$52.8 Bil (10.4%)  |
++------------------------------------+----------------------+----------------------+
 | Manufactured Goods                 | S\$22.6 Bil (3.9%)   | S\$30.9 Bil (6.1%)   |
++------------------------------------+----------------------+----------------------+
 | Food & Live Animals                | S\$15.2 Bil (2.6%)   | S\$14.0 Bil (2.7%)   |
++------------------------------------+----------------------+----------------------+
 
 There are top 10 major trading partners ??!!
 
@@ -505,7 +511,7 @@ tradesM_bot <- tradesM %>%
 
 ## 3.4 Derive scoped data frames
 
-The overview with all countries will be based on *tradesK_bot* data frame while the visualisation at regional level will be based on *tradesM_bot* data frame. The rest data frames will be covered in this section.
+The overview with all countries will be based on the *tradesK_bot* data frame, while the regional-level visualisation will be based on the *tradesM_bot* data frame. The rest data frames will be covered in this section.
 
 ### 3.4.1 G16 countries
 
@@ -522,11 +528,9 @@ g16 <- filter(tradesK_bot,
                 country == "Republic Of Korea" | country == "Saudi Arabia")
 ```
 
-Remarks :
-
 ### 3.4.2 ASEAN countries
 
-Filter 9 ASEAN members with reference to the [list of member-states](https://asean.org/member-states/) from asean.org.
+Filter 9 ASEAN members regarding the [list of member-states](https://asean.org/member-states/) from asean.org.
 
 ```{r}
 #| code-fold: false
@@ -551,9 +555,9 @@ eUnion <- tradesK_bot %>%
 
 Remarks :
 
-Avoid space between the countries' name and the pip "\|" character. Else, will return with empty data frame.
+Avoid space between the countries' names and the pip "\|" character. Else, it will return with an empty data frame.
 
-With references to *noExport* data frame, only Bulgaria and Croatia don't have trade data.
+With references to the *noExport* data frame, only Bulgaria and Croatia don't have trade data.
 
 ## 3.5 Create data frame for cycles plot
 
@@ -640,11 +644,9 @@ glimpse(exportTotal, 60)
 
 ```{r}
 asean_pvW <- asean %>%
-  group_by(year, country) %>%
-  summarise(tradeVolume = sum(tradeTotal)) %>%
-  pivot_wider(names_from = year, 
-              values_from = tradeVolume) %>%
-  arrange(desc(`2022`))
+  select(1:10) %>%
+  gather(key = "tradeType", 
+         value = "tradeVolume", -country, -period, -bot, -botMoM, -tradeTotal, -month, -year, -rateMoM)
 ```
 
 ```{r}
@@ -1057,6 +1059,10 @@ overviewPlot_regions <- ggplot() +
 overviewPlot_regions
 ```
 
+<br>
+
+### 4.1.3 BOT fluctuation by ASEAN members
+
 ```{r}
 #| fig-height: 5
 #| fig-width: 14
@@ -1127,48 +1133,252 @@ Remarks :
 
 Noticed after Russia invaded Ukraine, as indicated by the Orange line, both Laos and Thailand are prone to have negative rates month-over-month.
 
-## 4.2 Scatter Plot
+## 4.2 Visualise Import & Export 
 
-Visualise trading performances for import and export with other ASEAN members.
+### 4.2.1 Scatter Plot
+
+#### 4.2.1.1 16 members of G20 countries
+
+```{r}
+#| fig-height: 14
+#| fig-width: 14
+g16YoY_plot <- ggplot(g16,
+                        aes(x = export,
+                            y = import,
+                            text = paste("Country :", country,
+                                         "\nYoY :", period))) +
+  geom_point(aes(fill = country),
+             alpha = 0.6,
+             colour = "white",
+             stroke = 0.2) +
+  facet_grid(~year) +
+  labs(x = "Export Volume (Thousands Dollars)",
+       y = "Import Volume (Thousands Dollars)") +
+  ggtitle ("Singapore YOY Trade Performance with G16 Countries") +
+  theme(axis.text.x = element_text(size = 7, 
+                                   angle = 45),
+        axis.text.y = element_text(size = 7),
+        axis.title.y = element_text(margin = margin(r = 10), 
+                                    size = 8,
+                                    face = "bold",
+                                    colour = "#302f2f"),
+        axis.title.x = element_text(size = 8,
+                                    face = "bold",
+                                    colour = "#302f2f",
+                                    margin = margin(t = 15)),
+        strip.text = element_text(size = 8,
+                                  face = "bold",
+                                  colour = "#424242"),
+        strip.background = element_blank(),
+        plot.margin = margin(0.8, 0.5, 0.5, 1.5, "cm"))
+
+  
+ggplotly(g16YoY_plot,
+         tooltip = c("x", "y", "text")) %>%
+  layout(legend = list(x = 0,
+                       y = -0.4,
+                       orientation = "h",
+                       xanchor = "left", 
+                       yanchor = "bottom"))
+```
+
+<br>
+
+#### 4.2.1.2 ASEAN members
+
+Visualise trading performances (import and export) with other ASEAN members.
 
 ```{r}
 #| fig-height: 12
 #| fig-width: 14
 aseanYoY_plot <- ggplot(asean,
-       aes(x = export,
-           y = import,
-           color = country,
-           text = paste("period :", period))) +
-  geom_point() +
+                        aes(x = export,
+                            y = import,
+                            text = paste("Country :", country,
+                                         "\nYoY :", period))) +
+  geom_point(aes(fill = country),
+             alpha = 0.6,
+             colour = "white",
+             stroke = 0.2) +
   facet_grid(~year) +
   labs(x = "Export Volume (Thousands Dollars)",
-       y = "Import Volume\n(Thousands Dollars)") +
+       y = "Import Volume (Thousands Dollars)") +
   ggtitle ("Singapore YOY Trade Performance with ASEAN Countries") +
   theme(axis.text.x = element_text(size = 7, 
-                                   angle = 75),
+                                   angle = 45),
         axis.text.y = element_text(size = 7),
-        axis.title.y = element_text( 
-                                    size = 9,
+        axis.title.y = element_text(margin = margin(r = 10), 
+                                    size = 8,
                                     face = "bold",
                                     colour = "#302f2f"),
-        axis.title.x = element_text(size = 9,
+        axis.title.x = element_text(size = 8,
                                     face = "bold",
                                     colour = "#302f2f",
-                                    vjust = 0),
-        strip.text = element_text(size = 9,
+                                    margin = margin(t = 15)),
+        strip.text = element_text(size = 8,
                                   face = "bold",
                                   colour = "#424242"),
-        strip.background = element_blank())
+        strip.background = element_blank(),
+        plot.margin = margin(0.8, 0.5, 0.5, 1.5, "cm"))
 
   
 ggplotly(aseanYoY_plot,
-         tooltip = c("color", "text", "y", "x")) %>%
+         tooltip = c("x", "y", "text")) %>%
   layout(legend = list(x = 0,
-                       y = -0.5,
+                       y = -0.4,
                        orientation = "h",
                        xanchor = "left", 
                        yanchor = "bottom"))
 ```
+
+<br>
+
+#### 4.2.1.3 European Union members
+
+```{r}
+#| fig-height: 15
+#| fig-width: 14
+euYoY_plot <- ggplot(eUnion,
+                        aes(x = export,
+                            y = import,
+                            text = paste("Country :", country,
+                                         "\nYoY :", period))) +
+  geom_point(aes(fill = country),
+             alpha = 0.6,
+             colour = "white",
+             stroke = 0.2) +
+  facet_grid(~year) +
+  labs(x = "Export Volume (Thousands Dollars)",
+       y = "Import Volume (Thousands Dollars)") +
+  ggtitle ("Singapore YOY Trade Performance with EU Members") +
+  theme(axis.text.x = element_text(size = 7, 
+                                   angle = 45),
+        axis.text.y = element_text(size = 7),
+        axis.title.y = element_text(margin = margin(r = 10), 
+                                    size = 8,
+                                    face = "bold",
+                                    colour = "#302f2f"),
+        axis.title.x = element_text(size = 8,
+                                    face = "bold",
+                                    colour = "#302f2f",
+                                    margin = margin(t = 15)),
+        strip.text = element_text(size = 8,
+                                  face = "bold",
+                                  colour = "#424242"),
+        strip.background = element_blank(),
+        plot.margin = margin(0.8, 0.5, 0.5, 1.5, "cm"))
+
+  
+ggplotly(euYoY_plot,
+         tooltip = c("x", "y", "text")) %>%
+  layout(legend = list(x = 0,
+                       y = -0.55,
+                       orientation = "h",
+                       xanchor = "left", 
+                       yanchor = "bottom"))
+```
+
+<br>
+
+### 4.2.2 Lines Plot
+
+#### 4.2.2.1 Trade Performances with each ASEAN members
+
+```{r}
+#| fig-height: 12
+#| fig-width: 14
+ggplot(data = asean_pvW,
+       aes (x = period,
+            y = tradeVolume)) +
+  geom_line(aes
+            (color = tradeType, 
+              linetype = tradeType)) +
+  scale_color_manual(values = c("darkred", "steelblue")) +
+  facet_wrap(~country) +
+  labs(y = "Trade Volume\n(Thousand Dollars)",
+       x = "Year",
+       title = "Total trade volume with each ASEAN members",
+       subtitle = "from January 2020 to December 2022",
+       caption = "Data Source : Singstat.gov.sg, 2023") +
+  theme(plot.title = element_text(size = 20,
+                                  colour = "#302f2f",
+                                  face = "bold"),
+        plot.subtitle = element_text(size = 12,
+                                  colour = "#424242",
+                                  face = "italic"),
+        axis.text.x = element_text(size = 7, 
+                                   angle = 60, 
+                                   hjust = 0, 
+                                   vjust = -0.1),
+        axis.text.y = element_text(size = 7),
+        axis.title.y = element_text(angle = 0, 
+                                    size = 8,
+                                    face = "bold",
+                                    colour = "#302f2f",
+                                    vjust = 1.2,
+                                    margin = margin(r = -30)),
+        axis.title.x = element_text(size = 8,
+                                    face = "bold",
+                                    colour = "#302f2f",
+                                    margin = margin(9,0,0,0)),
+        strip.text = element_text(size = 10,
+                                  face = "bold",
+                                  colour = "#424242"),
+        strip.background = element_blank(),
+        plot.margin = margin(0.5,0.5,0.5,0.5,"cm"),
+        legend.position = "bottom",
+        legend.justification = "left")
+```
+
+#### 4.2.2.2 Trade Performances with each European Union members
+
+```{r}
+#| fig-height: 14
+#| fig-width: 14
+ggplot(data = eUnion_pvW,
+       aes (x = period,
+            y = tradeVolume)) +
+  geom_line(aes
+            (color = tradeType, 
+              linetype = tradeType)) +
+  scale_color_manual(values = c("darkred", "steelblue")) +
+  facet_wrap(~country) +
+  labs(y = "Trade Volume\n(Thousand Dollars)",
+       x = "Year",
+       title = "Total trade volume with each European Union members",
+       subtitle = "from January 2020 to December 2022",
+       caption = "Data Source : Singstat.gov.sg, 2023") +
+  theme(plot.title = element_text(size = 20,
+                                  colour = "#302f2f",
+                                  face = "bold"),
+        plot.subtitle = element_text(size = 12,
+                                  colour = "#424242",
+                                  face = "italic"),
+        axis.text.x = element_text(size = 7, 
+                                   angle = 60, 
+                                   hjust = 0, 
+                                   vjust = -0.1),
+        axis.text.y = element_text(size = 7),
+        axis.title.y = element_text(angle = 0, 
+                                    size = 8,
+                                    face = "bold",
+                                    colour = "#302f2f",
+                                    vjust = 1.2,
+                                    margin = margin(r = -30)),
+        axis.title.x = element_text(size = 8,
+                                    face = "bold",
+                                    colour = "#302f2f",
+                                    margin = margin(9,0,0,0)),
+        strip.text = element_text(size = 10,
+                                  face = "bold",
+                                  colour = "#424242"),
+        strip.background = element_blank(),
+        plot.margin = margin(0.5,0.5,0.5,0.5,"cm"),
+        legend.position = "bottom",
+        legend.justification = "left")
+```
+
+<br>
 
 ## 4.3 SlopeGraph
 
@@ -1179,7 +1389,7 @@ ggplotly(aseanYoY_plot,
 :::
 
 ```{r}
-#| fig-height: 14
+#| fig-height: 10
 #| fig-width: 14
 asean_export %>%
   newggslopegraph(year, volume_export, country,
@@ -1205,7 +1415,7 @@ Regarding trade balance, among all ASEAN members, Singapore has a trade surplus 
 Malaysia, on the contrary, shows the highest trade deficit despite growing demand for Singapore merchandise.
 
 ```{r}
-#| fig-height: 14
+#| fig-height: 10
 #| fig-width: 14
 asean_bot %>%
   newggslopegraph(year, bot, country,
@@ -1251,7 +1461,7 @@ region_areaPlot <- ggplot(tradesM_bot,
   scale_fill_viridis(discrete = TRUE) +
   theme_ipsum() +
   labs(x = "Period",
-       y = "Balance of Trade\n(Million Dollars)",
+       y = "Balance of Trade (Million Dollars)",
        fill = "Regions") +
   ggtitle("Singapore Trade Balance (BOT) by Regions from Jan 2020 to Dec 2022") +
   theme(axis.text.x = element_text(size = 8),
@@ -1279,7 +1489,7 @@ The trade balance for Africa and Oceania regions show noticeable growth compare 
 ### 4.4.2 Year-over-year(YoY) BOT with ASEAN members
 
 ```{r}
-#| fig-height: 10
+#| fig-height: 12
 #| fig-width: 14
 asean_areaPlot <- ggplot(asean,
                        aes(x = period, 
@@ -1295,12 +1505,13 @@ asean_areaPlot <- ggplot(asean,
   scale_fill_viridis(discrete = TRUE) +
   theme_ipsum() +
   labs(x = "Period",
-       y = "Balance of Trade\n(Thousand Dollars)",
+       y = "Balance of Trade (Thousand Dollars)",
        fill = "Country") +
   ggtitle("Singapore Trade Balance (BOT) with ASEAN from Jan 2020 to Dec 2022") +
   theme(axis.text.x = element_text(size = 8),
         axis.text.y = element_text(size = 8),
-        axis.title.y = element_text(size = 8),
+        axis.title.y = element_text(size = 8,
+                                    margin = margin(r = 10)),
         axis.title.x = element_text(size = 8,
                                     margin = margin(t = 2)),
         panel.grid.major = element_line(linewidth = rel(0.1)))
@@ -1308,7 +1519,7 @@ asean_areaPlot <- ggplot(asean,
 
 asean_areaPlot <- ggplotly(asean_areaPlot,
                          tooltip = c("text", "bot", "period")) %>%
-  layout(legend = list(y = -0.3,
+  layout(legend = list(y = -0.35,
                        orientation = "h",
                        xanchor = "left", 
                        yanchor = "bottom"))
@@ -1316,10 +1527,12 @@ asean_areaPlot <- ggplotly(asean_areaPlot,
 asean_areaPlot
 ```
 
+<br>
+
 ### 4.4.3 Year-over-year(YoY) BOT with G16 members
 
 ```{r}
-#| fig-height: 10
+#| fig-height: 12
 #| fig-width: 14
 g16_areaPlot <- ggplot(g16,
                        aes(x = period, 
@@ -1335,12 +1548,13 @@ g16_areaPlot <- ggplot(g16,
   scale_fill_viridis(discrete = TRUE) +
   theme_ipsum() +
   labs(x = "Period",
-       y = "Balance of Trade\n(Thousand Dollars)",
+       y = "Balance of Trade (Thousand Dollars)",
        fill = "Country") +
   ggtitle("Singapore Trade Balance (BOT) with G16  from Jan 2020 to Dec 2022") +
   theme(axis.text.x = element_text(size = 8),
         axis.text.y = element_text(size = 8),
-        axis.title.y = element_text(size = 8),
+        axis.title.y = element_text(size = 8,
+                                    margin = margin(r = 10)),
         axis.title.x = element_text(size = 8,
                                     margin = margin(t = 2)),
         panel.grid.major = element_line(linewidth = rel(0.1)))
@@ -1348,13 +1562,15 @@ g16_areaPlot <- ggplot(g16,
 
 g16_areaPlot <- ggplotly(g16_areaPlot,
                          tooltip = c("text", "bot", "period")) %>%
-  layout(legend = list(y = -0.3,
+  layout(legend = list(y = -0.4,
                        orientation = "h",
                        xanchor = "left", 
                        yanchor = "bottom"))
 
 g16_areaPlot
 ```
+
+<br>
 
 ### 4.4.4 Year-over-year(YoY) BOT with European Union members
 
@@ -1375,12 +1591,13 @@ eu_areaPlot <- ggplot(eUnion,
   scale_fill_viridis(discrete = TRUE) +
   theme_ipsum() +
   labs(x = "Period",
-       y = "Balance of Trade\n(Thousand Dollars)",
+       y = "Balance of Trade (Thousand Dollars)",
        fill = "Country") +
-  ggtitle("Singapore Trade Balance (BOT) with G16  from Jan 2020 to Dec 2022") +
+  ggtitle("Singapore Trade Balance (BOT) with EU Members from Jan 2020 to Dec 2022") +
   theme(axis.text.x = element_text(size = 8),
         axis.text.y = element_text(size = 8),
-        axis.title.y = element_text(size = 8),
+        axis.title.y = element_text(size = 8,
+                                    margin = margin(r = 10)),
         axis.title.x = element_text(size = 8,
                                     margin = margin(t = 2)),
         panel.grid.major = element_line(linewidth = rel(0.1)))
@@ -1388,7 +1605,7 @@ eu_areaPlot <- ggplot(eUnion,
 
 eu_areaPlot <- ggplotly(eu_areaPlot,
                          tooltip = c("text", "bot", "period")) %>%
-  layout(legend = list(y = -0.4,
+  layout(legend = list(y = -0.6,
                        orientation = "h",
                        xanchor = "left", 
                        yanchor = "bottom"))
@@ -1396,7 +1613,7 @@ eu_areaPlot <- ggplotly(eu_areaPlot,
 eu_areaPlot
 ```
 
-\<br\>
+<br>
 
 ## 4.5 Cycle Plots
 
@@ -1947,7 +2164,7 @@ oceaniaRegion_cp <- ggplot() +
                                     margin = margin(9,0,0,0)),
         strip.text = element_blank(),
         strip.background = element_blank(),        
-        plot.margin = margin(0.2,0.5,0.2,0.5,"cm"))
+        plot.margin = margin(0.2,0.5,1,0.5,"cm"))
 ```
 
 #### 4.5.1.6 Overview for All 5 Regions
@@ -1963,20 +2180,4 @@ ggpubr::ggarrange(africaRegion_cp,
                   ncol = 1,
                   nrow = 5,
                   align = "v")
-```
-
-## 4.6 Visualise Import & Export by Individual Country
-
-### 4.6.1 Germany
-
-```{r}
-#| fig-height: 4
-#| fig-width: 14
-ggplot(data = germany,
-       aes (x = period,
-            y = tradeVolume)) +
-  geom_line(aes
-            (color = tradeType, linetype = tradeType)) +
-  scale_color_manual(values = c("darkred", "steelblue"))
-
 ```
